--- a/reports/data_processing.Rmd
+++ b/reports/data_processing.Rmd
@@ -10,6 +10,7 @@ output: html_document
 library(Seurat)
 library(Signac)
 library(tidyverse)
+library(liger)
 
 knitr::opts_chunk$set(message = FALSE,
                       warning = FALSE, 
@@ -198,4 +199,26 @@ keep <- ( ! dup ) & is_cd8
 counts <- counts[, keep]
 saveRDS(counts, '../data/satpathy_cdtcells_only_counts.rds')
 ```
+
+```{r subsetting_scores}
+#cicero <- readRDS('~/Downloads/Log2_Gene_Activity_TME_All_SummarizedExperiment.final.rds')
+#scores <- cicero@assays$data$logGA[, keep]
+#saveRDS(scores, '../data/score_activity_matrix_cd8tcells.rds')
+scores <- read_rds('../data/score_activity_matrix_cd8tcells.rds')
+#sam_ann <- data.frame(
+#        UMAP1 = cicero$UMAP1,
+#        UMAP2 = cicero$UMAP2,
+#        cluster = cicero$Clusters,
+#        group = cicero$Group,
+#        Barcodes = cicero$Barcodes,
+#        Group_Barcodes = cicero$Group_Barcode
+#)
+#saveRDS(sam_ann[keep, ], '../data/score_activity_matrix_annotations_cd8tcells.rds')
+
+
+```
+
+
+
+
 
